--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.3",
-    "multer": "^2.0.0-rc.1"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
